@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.star.gr" version="2.4.1" name="STAR Player" provider-name="Twilight0">
+<addon id="plugin.video.star.gr" version="2.4.2" name="STAR Player" provider-name="Twilight0">
 	<requires>
 		<import addon="xbmc.addon" version="16.1.000"/>
 		<import addon="script.module.tulip" version="2.8.17" />
@@ -20,7 +20,10 @@
 		<source>https://github.com/Twilight0/plugin.video.star.gr</source>
 		<website>http://www.star.gr/</website>
 		<size>228454</size>
-		<news>[B]2.4.1[/B]
+		<news>[B]2.4.2[/B]
+- Bug fixes for live resolver
+
+[B]2.4.1[/B]
 - Bug fix
 
 [B]2.4.0[/B]
