@@ -1,3 +1,9 @@
+[B]2.4.2[/B]
+- Bug fixes for live resolver
+
+[B]2.4.1[/B]
+- Bug fix
+
 [B]2.4.0[/B]
 - Change caching method
 - Obtain plot for live tv
